FIX: blog cards on mobile

--- a/components/home/blogCard/styles.module.scss
+++ b/components/home/blogCard/styles.module.scss
@@ -8,7 +8,7 @@
   padding-bottom: 125px;
 
   @include mobile {
-    padding:0 20px;
+    padding:0 0 0 20px;
     margin-top: 30px;
     margin-bottom: 80px;
   }
@@ -81,12 +81,12 @@
       letter-spacing: -0.655696px;
       color: $black;
       margin-bottom: 40px;
-      max-width: 80%;
+      max-width: 90%;
 
       @include mobile {
         margin-bottom: 10px;
-        font-size: 20px;
-        line-height: 25px;
+        font-size: 18px;
+        line-height: 22px;
       }
     }
   }
